compiler integrated with server

--- a/about.html
+++ b/about.html
@@ -24,7 +24,18 @@
     <p>Click <a class="magic-text" href="/">this link</a> to go back.</p>
   </section>
 
-  <!-- %MWC FOOTER -->
+<section id="footer">
+  <div class="divider"></div>
+  <div id="footer-links">
+    <a href="https://stefantodoran.github.io/" target="_blank" class="footer-link">
+      <img src="assets/leaf-logo.png" height="15" alt="" class="tiny-logo" />
+      <span>Website Design</span>
+    </a>
+    <a id="scroll-top-button" href="#scroll-to-top" class="footer-link">
+      <span>© Todoran Technologies</span>
+    </a>
+  </div>
+</section>
 </body>
 
 </html>
