--- a/index.html
+++ b/index.html
@@ -20,11 +20,22 @@
   <section class="main-content">
     <h1><span class="magic-text">Milkyway</span>JS</h1>
 
-    <p>Run <span class="command-snippet">manage.py build</span> to build for production!</p>
-    <p>Click <a class="magic-text" href="/">this link</a> to go back.</p>
+    <p>Run <span class="command-snippet">manage.py runserver --watch</span> to get started!</p>
+    <p>Click <a class="magic-text" href="/about">this link</a> to check out another page.</p>
   </section>
 
-  <!-- %MWC FOOTER -->
+<section id="footer">
+  <div class="divider"></div>
+  <div id="footer-links">
+    <a href="https://stefantodoran.github.io/" target="_blank" class="footer-link">
+      <img src="assets/leaf-logo.png" height="15" alt="" class="tiny-logo" />
+      <span>Website Design</span>
+    </a>
+    <a id="scroll-top-button" href="#scroll-to-top" class="footer-link">
+      <span>© Todoran Technologies</span>
+    </a>
+  </div>
+</section>
 </body>
 
 </html>
