--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>MilkywayJS</title>
 
-  <link href="lib/index.min.css" rel="stylesheet" type="text/css" />
+  <link href="dist/index.min.css" rel="stylesheet" type="text/css" />
   <link href="assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
-  <script src="lib/index.js" type="module"></script>
+  <script src="dist/index.js" type="module"></script>
 </head>
 
 <body>
