silly gh pages root directory mistake fix

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1 class="animated-item pop-in"><span class="magic-text">Milkyway</span>JS</h1>
 
     <p>Run <span class="command-snippet" tabindex="0">manage.py runserver --watch</span> to get started!</p>
-    <p>Click <a class="magic-text" href="/about">this link</a> to check out another page.</p>
+    <p>Click <a class="magic-text" href="/milkyway-js/about">this link</a> to check out another page.</p>
   </section>
 
 <section id="footer" class="animated-item fade-in">
