--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <h1 class="animated-item pop-in"><span class="magic-text">Milkyway</span>JS</h1>
 
     <p>Run <span class="command-snippet" tabindex="0">manage.py runserver --watch</span> to get started!</p>
+<span class="command-snippet" tabindex="0">manage.py runserver --watch</span>
     <p>Click <a class="magic-text" href="/milkyway-js/about">this link</a> to check out another page.</p>
   </section>
 
