--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
-  <script src="dist/index.js" type="module"></script>
+  <script src="dist/index.min.js" type="module"></script>
 </head>
 
 <body id="scroll-to-top">
