if clauses added, multiple per line work but not multiline

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 
     <p>Run <span class="command-snippet" tabindex="0">manage.py runserver --watch</span> to get started!</p>
     <p>Click <a class="magic-text" href="/milkyway-js/about">this link</a> to check out another page.</p>
+  
+    <p>CODE BLOCK</p>
+<p>A</p><p>B</p>
+<p></p><p>no d value</p><div></div>
+
   </section>
 
   <section id="footer" class="animated-item fade-in">
