--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
 
     <p>Run <span class="command-snippet" tabindex="0">manage.py runserver --watch</span> to get started!</p>
     <p>Click <a class="magic-text" href="/milkyway-js/about">this link</a> to check out another page.</p>
-  
-    <p>CODE BLOCK</p>
-<p>A</p><p>B</p>
-<p></p><p>no d value</p><div></div>
-
   </section>
 
   <section id="footer" class="animated-item fade-in">
@@ -37,7 +32,7 @@
       <img src="assets/leaf-logo.png" height="15" alt="" class="tiny-logo" />
       <span>Website Design</span>
     </a>
-    <a id="scroll-top-button" href="#scroll-to-top" class="footer-link hover-tooltip" style="--content: 'Scroll Top ☝️'">
+    <a href="#scroll-to-top" class="footer-link hover-tooltip" style="--content: 'Scroll Top ☝️'">
       <span>© Todoran Technologies</span>
     </a>
   </div>
