--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <p>Click <a class="magic-text" href="/milkyway-js/about">this link</a> to check out another page.</p>
   </section>
 
+  <p style="color: red">testing</p>
+
+  <p style="color: blue">testing2</p>
+
+
   <section id="footer" class="animated-item fade-in">
   <div id="footer-links">
     <a href="https://stefantodoran.github.io/" target="_blank" class="footer-link hover-tooltip" style="--content: 'Work Together ❤️'">
