bugfix for multiline if

--- a/index.html
+++ b/index.html
@@ -26,9 +26,20 @@
     <p>Click <a class="magic-text" href="/milkyway-js/about">this link</a> to check out another page.</p>
   </section>
 
-  <p style="color: red">testing</p>
+  
+<p style="color: red">text</p>
 
-  <p style="color: blue">testing2</p>
+
+  <p>-</p>
+  <p style="color: blue">text</p>
+<p>not red</p>
+
+  <p>-</p>
+  
+<p style="color: red">text</p>
+
+<p style="color: blue">text</p>
+
 
 
   <section id="footer" class="animated-item fade-in">
