if statements can check values

--- a/index.html
+++ b/index.html
@@ -27,19 +27,14 @@
   </section>
 
   
-<p style="color: red">text</p>
+<p style="color: red">test</p>
 
-
-  <p>-</p>
-  <p style="color: blue">text</p>
-<p>not red</p>
 
   <p>-</p>
   
-<p style="color: red">text</p>
+<p style="color: red">test</p>
 
-<p style="color: blue">text</p>
-
+<p style="color: blue">test</p>
 
 
   <section id="footer" class="animated-item fade-in">
