--- a/index.html
+++ b/index.html
@@ -26,17 +26,10 @@
     <p>Click <a class="magic-text" href="/milkyway-js/about">this link</a> to check out another page.</p>
   </section>
 
-  
-<p style="color: red">test</p>
-
-
-  <p>-</p>
-  
-<p style="color: red">test</p>
-
-<p style="color: blue">test</p>
-
-
+  <p>CODE BLOCK</p>
+<p>a,a</p><p>b</p>
+<p>c</p><p>no d value</p><div></div>
+<p>not </p>
   <section id="footer" class="animated-item fade-in">
   <div id="footer-links">
     <a href="https://stefantodoran.github.io/" target="_blank" class="footer-link hover-tooltip" style="--content: 'Work Together ❤️'">
