first version of nested components working

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 
     <p>Run <span class="command-snippet" tabindex="0">manage.py runserver --watch</span> to get started!</p>
     <p>Click <a class="magic-text" href="/milkyway-js/about">this link</a> to check out another page.</p>
+    <div>
+  
+  
+  AB
+  
+  
+  
+  
+  <p>got prop A <p>bar helloA</p></p>
+  
+</div>
   </section>
 
   <section id="footer" class="animated-item fade-in">
